--- a/index.html
+++ b/index.html
@@ -6,6 +6,29 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi illum dolores, laborum porro consectetur asperiores deleniti cumque fugiat, hic error reprehenderit inventore aut iste quae perferendis totam eligendi dicta ab.</h2>
+    <table border="1" width="100%">
+        <thead></thead>
+        <tbody>
+            <tr>
+                <td colspan="2" >Header</td>
+            </tr>
+            <tr>
+                <td>
+                    <a href="login.html" target="myframe">Login</a>
+                    <br>
+                    <a href="registration.html" target="myframe">Registration</a>
+
+
+                </td>
+                <td>
+                    <iframe name="myframe" height="500" width="700"  src="./images/wolf.png"></iframe>
+                </td>
+            </tr>
+            <tr>
+                <td colspan="2">Footer</td>
+            </tr>
+        </tbody>
+        <tfoot></tfoot>
+    </table>
 </body>
 </html>
