--- a/index.html
+++ b/index.html
@@ -4,31 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
-    <table border="1" width="100%">
-        <thead></thead>
-        <tbody>
-            <tr>
-                <td colspan="2" >Header</td>
-            </tr>
-            <tr>
-                <td>
-                    <a href="login.html" target="myframe">Login</a>
-                    <br>
-                    <a href="registration.html" target="myframe">Registration</a>
-
-
-                </td>
-                <td>
-                    <iframe name="myframe" height="500" width="700"  src="./images/wolf.png"></iframe>
-                </td>
-            </tr>
-            <tr>
-                <td colspan="2">Footer</td>
-            </tr>
-        </tbody>
-        <tfoot></tfoot>
-    </table>
+    <div class="container">
+        <div class="child1">Child1</div>
+        <div class="child2">Child2</div>
+        <div class="child3">Child3</div>
+    </div>
 </body>
 </html>
